Conserto nas configurações do sprin e hibernate

--- a/HorseInformatica/src/main/webapp/WEB-INF/web.xml
+++ b/HorseInformatica/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,9 @@
 		<filter-name>wicket.HorseInformatica</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
 </web-app>
