--- a/HorseInformatica/pom.xml
+++ b/HorseInformatica/pom.xml
@@ -151,11 +151,11 @@
 			<version>${spring.version}</version>
 		</dependency>
 		
-		 <dependency>
+		<!--  <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
             <version>0.5.0.M4</version>
-        </dependency>
+        </dependency> -->
   
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
