Atualização de clientes passa a ser na base page com a criação do botão de ações que possui Configurações da conta e Sair

--- a/HorseInformatica/pom.xml
+++ b/HorseInformatica/pom.xml
@@ -51,11 +51,11 @@
 
 		<!-- JasperReports DEPENDENCIES -->
 
-		<dependency>
+	<!-- 	<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<version>4.0.0</version>
-		</dependency>
+		</dependency> -->
 
 		<!-- WICKET DEPENDENCIES -->
 		<dependency>
@@ -128,7 +128,7 @@
 		<dependency>
 			<groupId>org.hibernate </groupId>
 			<artifactId>hibernate-core </artifactId>
-			<version>4.2.4.Final</version>
+			<version>4.2.0.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
